--- a/language/en-GB/en-GB.mod_languages.ini
+++ b/language/en-GB/en-GB.mod_languages.ini
@@ -4,23 +4,32 @@
 ; Note : All ini files need to be saved as UTF-8
 
 MOD_LANGUAGES="Language Switcher"
-MOD_LANGUAGES_FIELD_ACTIVE_DESC="Display or not the active language. If displayed, the class 'lang-active' will be added to the element."
-MOD_LANGUAGES_FIELD_ACTIVE_LABEL="Active Language"
-MOD_LANGUAGES_FIELD_CACHING_DESC="Select whether to cache or not the content of this module.<br />This should be set to 'No caching' when using Items Associations."
-MOD_LANGUAGES_FIELD_DROPDOWN_DESC="If set to 'Yes', the display parameters below will be ignored. The content languages native names will display in a dropdown."
-MOD_LANGUAGES_FIELD_DROPDOWN_LABEL="Use Dropdown"
-MOD_LANGUAGES_FIELD_FOOTER_DESC="This is the text or HTML that is displayed below the language switcher."
-MOD_LANGUAGES_FIELD_FOOTER_LABEL="Post-text"
-MOD_LANGUAGES_FIELD_FULL_NAME_DESC="If set to 'Yes' and image flags set to 'No', full content language native names are displayed. If set to 'No', upper case abbreviations from the content languages URL Language Code are used. Example: EN for English, FR for French."
-MOD_LANGUAGES_FIELD_FULL_NAME_LABEL="Languages Full Names"
-MOD_LANGUAGES_FIELD_HEADER_DESC="This is the text or HTML that is displayed above the language switcher."
-MOD_LANGUAGES_FIELD_HEADER_LABEL="Pre-text"
-MOD_LANGUAGES_FIELD_INLINE_DESC="Default is set to 'Yes', ie to horizontal display."
-MOD_LANGUAGES_FIELD_INLINE_LABEL="Horizontal Display"
-MOD_LANGUAGES_FIELD_MODULE_LAYOUT_DESC="Use a different layout from the supplied module or overrides in the default template."
-MOD_LANGUAGES_FIELD_USEIMAGE_DESC="If set to 'Yes', will display language choice as image flags. Otherwise will use the content language native names."
-MOD_LANGUAGES_FIELD_USEIMAGE_LABEL="Use Image Flags"
-MOD_LANGUAGES_OPTION_DEFAULT_LANGUAGE="Default"
-MOD_LANGUAGES_SPACERDROP_LABEL="<u>If Use Dropdown is set to 'Yes', <br />the display options below will be ignored</u>"
-MOD_LANGUAGES_SPACERNAME_LABEL="<u>If Use Image Flags is set to 'Yes', <br />the display options below will be ignored</u>"
 MOD_LANGUAGES_XML_DESCRIPTION="This module displays a list of available Content Languages (as defined and published in Language Manager Content tab) for switching between them when you want to use Joomla! as a multilingual site. <br />--The plugin 'System - Language Filter' has to be enabled.--<br />When switching languages and if the item displayed in the page is not associated to another item, the module redirects to the Home page defined for the chosen language.<br />Otherwise, if the parameter is set for the Language filter plugin, it will redirect to the associated item in the language chosen. Thereafter, the navigation will be the one defined for that language. <br />If the plugin <strong>'System - Language Filter'</strong> is disabled, this may have unwanted results.<br /><strong>Method:</strong><br />1. Open Language Manager Content tab and make sure the Languages you want to use in contents are published and have a Language Code for the URL as well as prefix for the image used in the module display.<br />2. Create a Home page by assigning a language to a menu item and defining it as Default Home page for each published content language. <br />3. Thereafter, you can assign a language to any Article, Category, Module, News Feed, Web Links in Joomla.<br />4. Make sure the module is published and the plugin is enabled. <br />5. When using associated items, make sure the module is displayed on the pages concerned. <br />6. The way the flags or names of the languages are displayed is defined by the ordering in the Language Manager - Content Languages.<br ><br >If this module is published, it is suggested to publish the Administrator multilingual status module."
+MOD_LANGUAGES_FIELD_DROPDOWN_LABEL="Selector Display"
+MOD_LANGUAGES_FIELD_DROPDOWN_DESC="If set to 'Dropdown', the content languages native names will display in a dropdown. If set to 'List', the content languages native names will display in a list of text items or image items"
+MOD_LANGUAGES_FIELD_DROPDOWN_OPTION_DROPDOWN="Dropdown"
+MOD_LANGUAGES_FIELD_DROPDOWN_OPTION_LIST="List"
+MOD_LANGUAGES_FIELD_INLINE_LABEL="List Orientation"
+MOD_LANGUAGES_FIELD_INLINE_DESC="If set to 'Horizontal', the language list will have a horizontal display. If set to 'Vertical' the language list will have a vertical display."
+MOD_LANGUAGES_FIELD_INLINE_OPTION_HORIZONTAL="Horizontal"
+MOD_LANGUAGES_FIELD_INLINE_OPTION_VERTICAL="Vertical"
+MOD_LANGUAGES_FIELD_USEIMAGE_LABEL="Language Display"
+MOD_LANGUAGES_FIELD_USEIMAGE_DESC="If set to 'Image Flags', will display language choice as image flags. If set to 'Text', will use the content language native names."
+MOD_LANGUAGES_FIELD_USEIMAGE_OPTION_FLAGS="Image Flags"
+MOD_LANGUAGES_FIELD_USEIMAGE_OPTION_TEXT="Text"
+MOD_LANGUAGES_FIELD_FULL_NAME_LABEL="Language Text"
+MOD_LANGUAGES_FIELD_FULL_NAME_DESC="If set to 'Full Name', full content language native names are displayed. If set to 'Abbreviation', upper case abbreviations from the content languages URL Language Code are used. Example: EN for English, FR for French."
+MOD_LANGUAGES_FIELD_FULL_NAME_OPTION_FULL="Full Name"
+MOD_LANGUAGES_FIELD_FULL_NAME_OPTION_ABBREVIATION="Abbreviation"
+MOD_LANGUAGES_FIELD_ACTIVE_LABEL="Display Active Language"
+MOD_LANGUAGES_FIELD_ACTIVE_DESC="Display or not the active language. If displayed, the class 'lang-active' will also be added to the element."
+MOD_LANGUAGES_FIELD_HEADER_LABEL="Pre-text"
+MOD_LANGUAGES_FIELD_HEADER_DESC="This is the text or HTML that is displayed above the language switcher."
+MOD_LANGUAGES_FIELD_HEADER_HINT="Type the text or HTML to be displayed before the language switcher."
+MOD_LANGUAGES_FIELD_FOOTER_LABEL="Post-text"
+MOD_LANGUAGES_FIELD_FOOTER_DESC="This is the text or HTML that is displayed below the language switcher."
+MOD_LANGUAGES_FIELD_FOOTER_HINT="Type the text or HTML to be displayed after the language switcher."
+MOD_LANGUAGES_FIELD_CACHING_DESC="Select whether to cache or not the content of this module.<br />This should be set to 'No caching' when using Items Associations."
+MOD_LANGUAGES_FIELD_MODULE_LAYOUT_DESC="Use a different layout from the supplied module or overrides in the default template."
+MOD_LANGUAGES_OPTION_DEFAULT_LANGUAGE="Default"
+
