--- a/administrator/language/en-GB/en-GB.com_modules.ini
+++ b/administrator/language/en-GB/en-GB.com_modules.ini
@@ -122,6 +122,7 @@ COM_MODULES_OPTION_POSITION_TEMPLATE_DEFINED="Template"
 COM_MODULES_OPTION_POSITION_USER_DEFINED="User"
 COM_MODULES_OPTION_SELECT_CLIENT="- Select Type -"
 COM_MODULES_OPTION_SELECT_MODULE="- Select Type -"
+COM_MODULES_OPTION_SELECT_PAGES="- Select Pages -"
 COM_MODULES_OPTION_SELECT_POSITION="- Select Position -"
 COM_MODULES_OPTION_SELECT_TYPE="- Select type -"
 COM_MODULES_POSITION_ANALYTICS="Analytics"
