--- a/administrator/language/en-GB/en-GB.com_users.ini
+++ b/administrator/language/en-GB/en-GB.com_users.ini
@@ -5,7 +5,7 @@
 
 COM_CATEGORIES_CATEGORY_ADD_TITLE="User Notes: New Category"
 COM_CATEGORIES_CATEGORY_EDIT_TITLE="User Notes: Edit Category"
-COM_USERS_OPTION_FILTER_DATE="- Registration Date -"
+COM_USERS_OPTION_FILTER_DATE="- Select Registration Date -"
 COM_USERS_OPTION_RANGE_PAST_1MONTH="in the last month"
 COM_USERS_OPTION_RANGE_PAST_3MONTH="in the last 3 months"
 COM_USERS_OPTION_RANGE_PAST_6MONTH="in the last 6 months"
@@ -96,12 +96,12 @@ COM_USERS_FIELD_STATE_DESC="Set publication status."
 COM_USERS_FIELD_SUBJECT_DESC="The subject line for the note."
 COM_USERS_FIELD_SUBJECT_LABEL="Subject"
 COM_USERS_FIELD_USER_ID_LABEL="User"
-COM_USERS_FILTER_ACTIVE="- Active -"
+COM_USERS_FILTER_ACTIVE="- Select Active -"
 COM_USERS_FILTER_LABEL="Filter Users by:&#160;"
 COM_USERS_FILTER_NOTES="Show notes list for this user"
-COM_USERS_FILTER_STATE="- State -"
+COM_USERS_FILTER_STATE="- Select State -"
 COM_USERS_FILTER_USER_GROUP="Filter User Group"
-COM_USERS_FILTER_USERGROUP="- Group -"
+COM_USERS_FILTER_USERGROUP="- Select Group -"
 COM_USERS_GROUP_FIELD_PARENT_DESC="Choose a Parent for this Group."
 COM_USERS_GROUP_FIELD_PARENT_LABEL="Group Parent"
 COM_USERS_GROUP_FIELD_TITLE_DESC="Enter a Title for the Group."
