update info message

--- a/language/en-GB/en-GB.lib_joomla.ini
+++ b/language/en-GB/en-GB.lib_joomla.ini
@@ -661,6 +661,7 @@ JLIB_UPDATER_ERROR_COLLECTION_PARSE_URL="Update: :Collection: Could not parse %s
 JLIB_UPDATER_ERROR_EXTENSION_OPEN_URL="Update: :Extension: Could not open %s"
 JLIB_UPDATER_ERROR_EXTENSION_PARSE_URL="Update: :Extension: Could not parse %s"
 JLIB_UPDATER_ERROR_OPEN_UPDATE_SITE="Update: Could not open update site #%d &quot;%s&quot;, URL: %s"
+JLIB_UPDATER_ERROR_MANUAL_UPDATE_INFORMATION="There seems to be a problem comunicating to Joomla! update server.<br/>It could be a temporary problem with Joomla! update server or it could be related to your server configuration.<br/>If the problem persists, manually download the update package and install it using <a href='/administrator/index.php?option=com_installer' target='_blank'>Extensions Manager Installer</a>.<br /><br /><a class='btn btn-primary' href='https://github.com/joomla/joomla-cms/releases' target='_blank'>Go to Joomla! download page</a>"
 JLIB_USER_ERROR_AUTHENTICATION_FAILED_LOAD_PLUGIN="JAuthentication: :authenticate: Failed to load plugin: %s"
 JLIB_USER_ERROR_AUTHENTICATION_LIBRARIES="JAuthentication: :__construct: Could not load authentication libraries."
 JLIB_USER_ERROR_BIND_ARRAY="Unable to bind array to user object."
