add new language strings to com_config language file

--- a/administrator/language/en-GB/en-GB.com_config.ini
+++ b/administrator/language/en-GB/en-GB.com_config.ini
@@ -42,12 +42,18 @@ COM_CONFIG_FIELD_COOKIE_DOMAIN_DESC="Domain to use when setting session cookies.
 COM_CONFIG_FIELD_COOKIE_DOMAIN_LABEL="Cookie Domain"
 COM_CONFIG_FIELD_COOKIE_PATH_DESC="Path the cookie should be valid for."
 COM_CONFIG_FIELD_COOKIE_PATH_LABEL="Cookie Path"
+COM_CONFIG_FIELD_DATABASE_COMPRESS_DESC="If you want to use a compressed connection to the database server."
+COM_CONFIG_FIELD_DATABASE_COMPRESS_LABEL="Compress Connection"
 COM_CONFIG_FIELD_DATABASE_HOST_DESC="The hostname for your database entered during the installation process. Do not edit this field unless absolutely necessary (eg the transfer of the database to a new hosting provider)."
 COM_CONFIG_FIELD_DATABASE_HOST_LABEL="Host"
 COM_CONFIG_FIELD_DATABASE_NAME_DESC="The name for your database entered during the installation process. Do not edit this field unless absolutely necessary (eg the transfer of the database to a new hosting provider)."
 COM_CONFIG_FIELD_DATABASE_NAME_LABEL="Database Name"
+COM_CONFIG_FIELD_DATABASE_PERSISTENT_DESC="If you want to use a persistent connection to the database server."
+COM_CONFIG_FIELD_DATABASE_PERSISTENT_LABEL="Persistent Connection"
 COM_CONFIG_FIELD_DATABASE_PREFIX_DESC="The prefix used for your database tables entered during the installation process. Do not edit field unless absolutely necessary (eg the transfer of the database to a new hosting provider)."
 COM_CONFIG_FIELD_DATABASE_PREFIX_LABEL="Database Tables Prefix"
+COM_CONFIG_FIELD_DATABASE_SECURE_DESC="The type of connection to the database. Do not edit this field unless you're sure your database server supports secure client connections."
+COM_CONFIG_FIELD_DATABASE_SECURE_LABEL="Secure Connection"
 COM_CONFIG_FIELD_DATABASE_TYPE_DESC="The type of database in use entered during the installation process. Do not edit this field unless you are having to migrate to a different type of database, perhaps due to changing your hosting provider."
 COM_CONFIG_FIELD_DATABASE_TYPE_LABEL="Database Type"
 COM_CONFIG_FIELD_DATABASE_USERNAME_DESC="The username for access to your database entered during the installation process. Do not edit this field unless absolutely necessary (eg the transfer of the database to a new hosting provider)."
