--- a/administrator/language/en-GB/en-GB.com_cache.ini
+++ b/administrator/language/en-GB/en-GB.com_cache.ini
@@ -15,19 +15,28 @@ COM_CACHE_EXPIRED_ITEMS_HAVE_BEEN_DELETED="The selected cache group(s) have been
 COM_CACHE_EXPIRED_ITEMS_HAVE_BEEN_PURGED="Expired cached items have been cleared."
 COM_CACHE_EXPIRED_ITEMS_DELETE_ERROR="Error clearing cache group(s): %s."
 COM_CACHE_EXPIRED_ITEMS_PURGING_ERROR="Error clearing expired cached items."
-COM_CACHE_FILTER_SEARCH_DESC="Search in cache group."
+COM_CACHE_FILTER_SEARCH_DESC="Search in title, type and cache group."
 COM_CACHE_FILTER_SEARCH_LABEL="Search Cache"
+COM_CACHE_FILTER_TYPE_DESC="Filter by cache type"
+COM_CACHE_FILTER_TYPE_LABEL="Select cache type"
 COM_CACHE_GROUP="Cache Group"
+COM_CACHE_GROUP_TYPE_PAGE="Webpages"
+COM_CACHE_GROUP_TYPE_SYSTEM="System"
+COM_CACHE_GROUP_TYPE_UNKNOWN="Unknown (%s)"
 COM_CACHE_HEADING_GROUP_ASC="Cache Group ascending"
 COM_CACHE_HEADING_GROUP_DESC="Cache Group descending"
 COM_CACHE_HEADING_COUNT_ASC="Number of Files ascending"
 COM_CACHE_HEADING_COUNT_DESC="Number of Files descending"
+COM_CACHE_HEADING_TYPE="Type"
+COM_CACHE_HEADING_TYPE_ASC="Type ascending"
+COM_CACHE_HEADING_TYPE_DESC="Type descending"
 COM_CACHE_HEADING_SIZE_ASC="Size ascending"
 COM_CACHE_HEADING_SIZE_DESC="Size descending"
 COM_CACHE_MANAGER="Cache"
 COM_CACHE_MSG_ALL_CACHE_GROUPS_CLEARED="All cache group(s) have been cleared."
 COM_CACHE_MSG_SOME_CACHE_GROUPS_CLEARED="Only some cache group(s) have been cleared."
 COM_CACHE_NUMBER_OF_FILES="Number of Files"
+COM_CACHE_OPTION_SELECT_TYPE="- Select Type -"
 COM_CACHE_PURGE_CACHE_ADMIN="Clear Cache Administrator"
 COM_CACHE_PURGE_EXPIRED="Clear Expired Cache"
 COM_CACHE_PURGE_EXPIRED_ITEMS="Clear expired items"
@@ -35,5 +44,11 @@ COM_CACHE_PURGE_INSTRUCTIONS="Select the Clear Expired Cache icon in the toolbar
 COM_CACHE_RESOURCE_INTENSIVE_WARNING="This can be resource intensive on sites with a large number of items!"
 COM_CACHE_SIZE="Size"
 COM_CACHE_SELECT_CLIENT="- Select Location -"
+COM_CACHE_TYPE_COMPONENT="Component"
+COM_CACHE_TYPE_LIBRARY="Library"
+COM_CACHE_TYPE_MODULE="Module"
+COM_CACHE_TYPE_OTHER="Other"
+COM_CACHE_TYPE_PLUGIN="Plugin"
+COM_CACHE_TYPE_TEMPLATE="Template"
 COM_CACHE_XML_DESCRIPTION="Component for cache management."
 JLIB_RULES_SETTING_NOTES="Changes apply to this component only.<br /><em><strong>Inherited</strong></em> - a Global Configuration setting or higher level setting is applied.<br /><em><strong>Denied</strong></em> always wins - whatever is set at the Global or higher level and applies to all child elements.<br /><em><strong>Allowed</strong></em> will enable the action for this component unless it is overruled by a Global Configuration setting."
