--- a/administrator/language/en-GB/en-GB.lib_joomla.ini
+++ b/administrator/language/en-GB/en-GB.lib_joomla.ini
@@ -226,10 +226,11 @@ JLIB_DATABASE_ERROR_VALID_MAIL="Please enter a valid email address."
 JLIB_DATABASE_ERROR_VIEWLEVEL="Viewlevel must have a title."
 JLIB_DATABASE_FUNCTION_NOERROR="DB function reports no errors."
 JLIB_DATABASE_QUERY_FAILED="Database query failed (error # %s): %s"
-JLIB_DATABASE_WARNING_MENU_ALIAS_MONOLINGUAL_PARENT="This alias is already being used by another menu item (<a href="_QQ_"%s"_QQ_">%s</a>) in the same menu with the same parent.<br />The current date was added as a suffix to this menu item alias to avoid conflicts."
-JLIB_DATABASE_WARNING_MENU_ALIAS_MONOLINGUAL_ROOT="This alias is already being used by another menu item (<a href="_QQ_"%s"_QQ_">%s</a>) in the top level of another menu (%s menu).<br />The current date was added as a suffix to this menu item alias to avoid conflicts."
-JLIB_DATABASE_WARNING_MENU_ALIAS_MULTILINGUAL_PARENT="This alias is already being used by another menu item (<a href="_QQ_"%s"_QQ_">%s</a>) in the same menu with the same parent and the same language or the All language (or any language if this menu item is set to All language).<br />The current date was added as a suffix to this menu item alias to avoid conflicts."
-JLIB_DATABASE_WARNING_MENU_ALIAS_MULTILINGUAL_ROOT="This alias is already being used by another menu item (<a href="_QQ_"%s"_QQ_">%s</a>) in the top level of another menu (%s menu) with the same language or the All language (or any language if this menu item is set to All language).<br />The current date was added as a suffix to this menu item alias to avoid conflicts."
+JLIB_DATABASE_WARNING_MENU_ALIAS_AVOID_CONFLICTS="To avoid conflicts, the alias was changed to "_QQ_"%s"_QQ_"."
+JLIB_DATABASE_WARNING_MENU_ALIAS_MONOLINGUAL_PARENT="The alias "_QQ_"%s"_QQ_" is already being used by other menu item (<a href="_QQ_"%s"_QQ_">%s</a>) that is in the same menu and has the same parent."
+JLIB_DATABASE_WARNING_MENU_ALIAS_MONOLINGUAL_ROOT="The alias "_QQ_"%s"_QQ_" is already being used by other menu item (<a href="_QQ_"%s"_QQ_">%s</a>) that is in the top level of other menu (%s menu)."
+JLIB_DATABASE_WARNING_MENU_ALIAS_MULTILINGUAL_PARENT="The alias "_QQ_"%s"_QQ_" is already being used by other menu item (<a href="_QQ_"%s"_QQ_">%s</a>) that is in the same menu, has the same parent and the same or All language (or any language if this menu item is set to All language)."
+JLIB_DATABASE_WARNING_MENU_ALIAS_MULTILINGUAL_ROOT="The alias "_QQ_"%s"_QQ_" is already being used by other menu item (<a href="_QQ_"%s"_QQ_">%s</a>) that is in the top level of other menu (%s menu) and  has the same or All language (or any language if this menu item is set to All language)."
 
 JLIB_DOCUMENT_ERROR_UNABLE_LOAD_DOC_CLASS="Unable to load document class."
 JLIB_ENVIRONMENT_SESSION_EXPIRED="Your session has expired. Please log in again."
