--- a/language/en-GB/en-GB.lib_joomla.ini
+++ b/language/en-GB/en-GB.lib_joomla.ini
@@ -189,6 +189,13 @@ JLIB_DATABASE_ERROR_MENU_CANNOT_UNSET_DEFAULT_DEFAULT="At least one menu item ha
 JLIB_DATABASE_ERROR_MENU_UNPUBLISH_DEFAULT_HOME="Can't unpublish default home."
 JLIB_DATABASE_ERROR_MENU_DEFAULT_CHECKIN_USER_MISMATCH="The current home menu for this language is checked out."
 JLIB_DATABASE_ERROR_MENU_UNIQUE_ALIAS="Another menu item with the same parent has this alias (remember it may be a trashed item)."
+JLIB_DATABASE_ERROR_MENU_UNIQUE_ALIAS_ALREADY_USED="The alias "_QQ_"%s"_QQ_" is already being used by "_QQ_"<a href="_QQ_"%s"_QQ_">%s</a>"_QQ_" menu item."
+JLIB_DATABASE_ERROR_MENU_UNIQUE_ALIAS_CUSTOM="Either add a custom alias in this menu item or change the alias in the other menu item."
+JLIB_DATABASE_ERROR_MENU_UNIQUE_ALIAS_CHANGE="Either change the alias in this menu item or change the alias in the other menu item."
+JLIB_DATABASE_ERROR_MENU_UNIQUE_ALIAS_MONOLINGUAL_PARENT="Both have the same parent menu item."
+JLIB_DATABASE_ERROR_MENU_UNIQUE_ALIAS_MONOLINGUAL_ROOT="Both are in the top level of their menus."
+JLIB_DATABASE_ERROR_MENU_UNIQUE_ALIAS_MULTILINGUAL_PARENT="Both have the same parent menu item and have the same or All language (or any language if this menu item is set to All language)."
+JLIB_DATABASE_ERROR_MENU_UNIQUE_ALIAS_MULTILINGUAL_ROOT="Both are in the top level of their menus and have the same or All language (or any language if this menu item is set to All language)."
 JLIB_DATABASE_ERROR_MENU_UNIQUE_ALIAS_ROOT="Another menu item has the same alias in Root (remember it may be a trashed item). Root is the top level parent."
 JLIB_DATABASE_ERROR_MENU_HOME_NOT_COMPONENT="The home menu item must be a component."
 JLIB_DATABASE_ERROR_MENU_HOME_NOT_UNIQUE_IN_MENU="A menu should contain only one Default home."
@@ -226,11 +233,6 @@ JLIB_DATABASE_ERROR_VALID_MAIL="Please enter a valid email address."
 JLIB_DATABASE_ERROR_VIEWLEVEL="Viewlevel must have a title."
 JLIB_DATABASE_FUNCTION_NOERROR="DB function reports no errors."
 JLIB_DATABASE_QUERY_FAILED="Database query failed (error # %s): %s"
-JLIB_DATABASE_WARNING_MENU_ALIAS_AVOID_CONFLICTS="To avoid conflicts, the alias was changed to "_QQ_"%s"_QQ_"."
-JLIB_DATABASE_WARNING_MENU_ALIAS_MONOLINGUAL_PARENT="The alias "_QQ_"%s"_QQ_" is already being used by other menu item (<a href="_QQ_"%s"_QQ_">%s</a>) with the same parent."
-JLIB_DATABASE_WARNING_MENU_ALIAS_MONOLINGUAL_ROOT="The alias "_QQ_"%s"_QQ_" is already being used by other menu item (<a href="_QQ_"%s"_QQ_">%s</a>) that is in the top level of other menu (%s menu)."
-JLIB_DATABASE_WARNING_MENU_ALIAS_MULTILINGUAL_PARENT="The alias "_QQ_"%s"_QQ_" is already being used by other menu item (<a href="_QQ_"%s"_QQ_">%s</a>) with the same parent and the same or All language (or any language if this menu item is set to All language)."
-JLIB_DATABASE_WARNING_MENU_ALIAS_MULTILINGUAL_ROOT="The alias "_QQ_"%s"_QQ_" is already being used by other menu item (<a href="_QQ_"%s"_QQ_">%s</a>) that is in the top level of other menu (%s menu) and  has the same or All language (or any language if this menu item is set to All language)."
 
 JLIB_DOCUMENT_ERROR_UNABLE_LOAD_DOC_CLASS="Unable to load document class."
 JLIB_ENVIRONMENT_SESSION_EXPIRED="Your session has expired. Please log in again."
