open link in new window

--- a/administrator/language/en-GB/en-GB.lib_joomla.ini
+++ b/administrator/language/en-GB/en-GB.lib_joomla.ini
@@ -189,7 +189,7 @@ JLIB_DATABASE_ERROR_MENU_CANNOT_UNSET_DEFAULT_DEFAULT="At least one menu item ha
 JLIB_DATABASE_ERROR_MENU_UNPUBLISH_DEFAULT_HOME="Can't unpublish default home."
 JLIB_DATABASE_ERROR_MENU_DEFAULT_CHECKIN_USER_MISMATCH="The current home menu for this language is checked out."
 JLIB_DATABASE_ERROR_MENU_UNIQUE_ALIAS="Another menu item with the same parent has this alias (remember it may be a trashed item)."
-JLIB_DATABASE_ERROR_MENU_UNIQUE_ALIAS_ALREADY_USED="The alias "_QQ_"%s"_QQ_" is already being used by "_QQ_"<a href="_QQ_"%s"_QQ_">%s</a>"_QQ_" menu item."
+JLIB_DATABASE_ERROR_MENU_UNIQUE_ALIAS_ALREADY_USED="The alias "_QQ_"%s"_QQ_" is already being used by "_QQ_"<a href="_QQ_"%s"_QQ_" target="_blank">%s</a>"_QQ_" (opens in a new window) menu item."
 JLIB_DATABASE_ERROR_MENU_UNIQUE_ALIAS_CUSTOM="Either add a custom alias in this menu item or change the alias in the other menu item."
 JLIB_DATABASE_ERROR_MENU_UNIQUE_ALIAS_CHANGE="Either change the alias in this menu item or change the alias in the other menu item."
 JLIB_DATABASE_ERROR_MENU_UNIQUE_ALIAS_MONOLINGUAL_PARENT="Both have the same parent menu item."
